cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_222.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bio/bf_null.c:98: error: DEAD_STORE
  The value written to &ret (type long) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/bio/bf_null.c:98:5: Write of unused value
96.   static long nullf_callback_ctrl(BIO *b, int cmd, BIO_info_cb *fp)
97.   {
98.       long ret = 1;
           ^
99.   
100.       if (b->next_bio == NULL)
